daos terminados de vrd